--- a/マニュアル.md
+++ b/マニュアル.md
@@ -812,3 +812,633 @@ LDAP、SAML、OAuth2 などとの外部認証統合設定方法
 🔗 [GitLab Docs – Audit Events (Premium 以上)](https://docs.gitlab.com/ee/administration/audit_events.html)
 
 ---
+
+はい、**EC2 + GitLab（Docker）構成**におけるバックアップ戦略は、次の 2 つの層に分けて設計・運用するのが実践的です：
+
+---
+
+# ✅ 5.1 バックアップ（詳細手順付き）
+
+## 概要
+
+GitLab を安定運用する上で、**定期的なバックアップは必須**です。
+特に以下の 2 つを分けて考える必要があります：
+
+### 🔹（A）GitLab アプリケーションのバックアップ
+
+GitLab が管理する **リポジトリ・DB・アーティファクト** などのバックアップ
+👉 GitLab 公式の `gitlab-backup` コマンドで実行
+
+### 🔹（B）EC2 インスタンス全体のバックアップ
+
+GitLab 以外の環境設定も含めた **OS 丸ごとスナップショット**
+👉 EC2 の EBS スナップショットとして管理
+
+---
+
+## 🔸（A）GitLab アプリケーションのバックアップ
+
+### 🔧 対象データ
+
+Docker 上で GitLab を運用している場合、以下の 3 つのボリュームに重要データが格納されています：
+
+| ホストパス         | コンテナマウント先 | 内容                          |
+| ------------------ | ------------------ | ----------------------------- |
+| `~/gitlab/config/` | `/etc/gitlab`      | GitLab 設定ファイル群         |
+| `~/gitlab/logs/`   | `/var/log/gitlab`  | ログ                          |
+| `~/gitlab/data/`   | `/var/opt/gitlab`  | リポジトリ・DB・CI データなど |
+
+---
+
+### ✅ バックアップ手順（GitLab 公式）
+
+1. **GitLab コンテナに入る**
+
+```bash
+sudo docker exec -it gitlab /bin/bash
+```
+
+2. **バックアップコマンドを実行**
+
+```bash
+gitlab-backup create
+```
+
+3. **完了後、以下のパスに `.tar` バックアップファイルが作成される**
+
+```
+/var/opt/gitlab/backups/
+例: 1714186411_2024_04_27_16.4.2_gitlab_backup.tar
+```
+
+4. **ホスト側にコピーして、外部ストレージ等に保存（推奨）**
+
+```bash
+# ホスト側で実行
+sudo docker cp gitlab:/var/opt/gitlab/backups/1714186411_*.tar ./backups/
+```
+
+---
+
+### ✅ 復元手順
+
+1. `.tar` ファイルを GitLab コンテナ内に配置し、GitLab を停止：
+
+```bash
+sudo docker cp 1714186411_backup.tar gitlab:/var/opt/gitlab/backups/
+sudo docker exec -it gitlab gitlab-ctl stop unicorn
+sudo docker exec -it gitlab gitlab-ctl stop sidekiq
+```
+
+2. **バックアップを復元：**
+
+```bash
+sudo docker exec -it gitlab gitlab-backup restore BACKUP=1714186411_2024_04_27_16.4.2
+```
+
+3. **再起動：**
+
+```bash
+sudo docker exec -it gitlab gitlab-ctl restart
+```
+
+---
+
+## 🔸（B）EC2 インスタンス（OS ごと）のバックアップ
+
+GitLab に加えて、OS や Docker 設定、各種ログも含めた丸ごとのバックアップを行うには、**Amazon EC2 の EBS スナップショット機能**を活用します。
+
+### ✅ バックアップ手順（EBS スナップショット）
+
+1. AWS マネジメントコンソールで EC2 ダッシュボードに移動
+2. 対象インスタンスの **ルート EBS ボリューム** を確認
+3. 「アクション」→「スナップショットを作成」
+4. 名前、説明を付けて実行
+
+> ⏰ 自動スナップショット化には「ライフサイクルマネージャー」設定が便利
+
+---
+
+## 💡 実運用のポイント
+
+| 項目             | 推奨事項                                                      |
+| ---------------- | ------------------------------------------------------------- |
+| バックアップ頻度 | `gitlab-backup`：1 日 1 回、`EBSスナップショット`：週 1〜月 1 |
+| バックアップ先   | 外部ディスク・S3・リモートサーバーなどに定期転送              |
+| テスト復元       | 月 1 回以上、テスト環境で復元手順を確認                       |
+| 自動化           | `cron` or `systemd timer` で GitLab バックアップを定期実行    |
+
+---
+
+## 🔗 公式ドキュメントリンクまとめ
+
+- 🔧 [Create a Backup](https://docs.gitlab.com/ee/raketasks/backup_restore.html#create-a-backup-of-the-gitlab-system)
+- ♻️ [Restore from Backup](https://docs.gitlab.com/ee/raketasks/backup_restore.html#restore-a-backup-of-the-gitlab-system)
+- 🛡️ [EC2 – EBS Snapshot](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ebs-creating-snapshot.html)
+
+---S
+以下に、「**2.1 Git リポジトリ機能**」に対応する **GitLab 上での具体的な利用手順** を丁寧に解説します。
+GitLab Flow に基づいた**実際の開発操作**（ブランチ作成〜マージまで）をベースにしています。
+
+---
+
+## 🔧 2.1 Git リポジトリ機能（詳細手順）
+
+GitLab のリポジトリ機能は、ブランチの作成、マージリクエスト（Merge Request）の送信、レビュー、差分比較などを一連の流れで直感的に扱えるようになっています。
+
+---
+
+### 🪜 ステップ 1：新しいプロジェクトの作成
+
+1. GitLab にログイン
+2. 右上の「**\[New project]**」ボタンをクリック
+3. 以下を入力
+
+   - Project name：例 `sample-app`
+   - Visibility level：Private（推奨）
+
+4. 「**Initialize repository with a README**」にチェック
+5. 「**\[Create project]**」をクリック
+
+---
+
+### 🪜 ステップ 2：リポジトリをクローン
+
+```bash
+# HTTPSまたはSSHでクローン（プロジェクト画面の "Clone" ボタンから取得）
+git clone https://gitlab.example.com/your-username/sample-app.git
+cd sample-app
+```
+
+---
+
+### 🪜 ステップ 3：新しいブランチの作成と作業
+
+```bash
+# 作業用の新ブランチ作成（例：feature/login）
+git checkout -b feature/login
+
+# ファイルを編集
+echo "<h1>Login Page</h1>" > login.html
+
+# コミット
+git add login.html
+git commit -m "Add login page"
+
+# GitLab にプッシュ
+git push origin feature/login
+```
+
+---
+
+### 🪜 ステップ 4：マージリクエスト（Merge Request）の作成
+
+1. GitLab プロジェクトページにアクセス
+2. 「**Merge Requests**」タブをクリック
+3. 「**New merge request**」をクリック
+4. 以下を設定
+
+   - Source branch: `feature/login`
+   - Target branch: `main`
+
+5. 「Compare branches and continue」をクリック
+6. タイトル・説明を記入し、「**Create merge request**」をクリック
+
+---
+
+### 🪜 ステップ 5：コードレビュー・差分比較
+
+レビュワーは以下のように操作できます：
+
+- 「Changes」タブで差分を確認
+- 行単位でコメント（+マーク）を追加
+- 「Approve」や「Request changes」でフィードバック
+
+---
+
+### 🪜 ステップ 6：マージの実行
+
+すべてのレビューが完了したら、MR 画面右上の「**Merge**」ボタンをクリック
+※オプション：マージ後にブランチを自動削除する設定も可能（`Delete source branch`）
+
+---
+
+### 🪜 ステップ 7：履歴管理と差分確認
+
+- 「Repository → Commits」で履歴を一覧表示
+- 「Repository → Compare」で任意の 2 ブランチ間の差分を確認可能
+
+---
+
+## 🔗 参考リンク（公式ドキュメント）
+
+- [GitLab Docs – Repositories](https://docs.gitlab.com/ee/user/project/repository/)
+- [GitLab Docs – Working with branches](https://docs.gitlab.com/ee/user/project/repository/branches/)
+- [GitLab Docs – Merge requests](https://docs.gitlab.com/ee/user/project/merge_requests/)
+
+---
+
+## ✅ 補足：ブランチ戦略について
+
+- **GitLab Flow**（公式推奨）：`main` に常にデプロイ可能な状態を保ち、`feature/*` や `fix/*` ブランチで並列開発し、マージリクエストで統合。
+- **運用 Tips**：
+
+  - `main` 直 Push を禁止（「Protected Branches」機能）
+  - MR 作成時に CI/CD で自動テストを回す
+
+---
+
+以下に「**2.2 パイプライン機能（CI/CD）**」の詳細な使い方（ステップバイステップ）を示します。
+`.gitlab-ci.yml` の作成から GitLab Runner による自動実行、実行結果の確認までをカバーします。
+
+---
+
+## 🔧 2.2 パイプライン機能（CI/CD）詳細手順
+
+GitLab の CI/CD は `.gitlab-ci.yml` をプロジェクトのルートに置くだけで使えます。コードの変更を push すると、自動的にジョブが実行されます。
+
+---
+
+### 🪜 ステップ 1：GitLab Runner が設定されていることを確認
+
+- 管理者権限がある場合、`/admin/runners` で確認
+- プロジェクトレベルでも `Settings > CI/CD > Runners` に登録されているか確認
+
+> 🔗 参考：[GitLab Docs – Runners](https://docs.gitlab.com/ee/ci/runners/)
+
+---
+
+### 🪜 ステップ 2：`.gitlab-ci.yml` を作成する
+
+プロジェクトのルートディレクトリに以下のような CI 設定ファイルを追加します。
+
+#### 例：Node.js プロジェクト用の簡単な CI 設定
+
+```yaml
+stages:
+  - install
+  - test
+
+install-job:
+  stage: install
+  script:
+    - echo "Installing dependencies..."
+    - npm install
+  cache:
+    paths:
+      - node_modules/
+
+test-job:
+  stage: test
+  script:
+    - echo "Running tests..."
+    - npm run test
+```
+
+> 💡 `.gitlab-ci.yml` は YAML フォーマット。インデントはスペース 2 つ以上で厳密です。
+
+---
+
+### 🪜 ステップ 3：CI/CD の自動実行を確認する
+
+1. `.gitlab-ci.yml` を `main` または任意のブランチにコミット & push：
+
+```bash
+git add .gitlab-ci.yml
+git commit -m "Add GitLab CI config"
+git push origin main
+```
+
+2. GitLab Web UI → 「**CI/CD > Pipelines**」にアクセス
+3. 実行中または完了したパイプラインが表示されているはずです
+
+---
+
+### 🪜 ステップ 4：ジョブログやステータスの確認
+
+1. 「Pipelines」一覧から実行されたものをクリック
+2. 各ステージ（install, test）のジョブが表示されます
+3. ジョブ名をクリックするとログ（標準出力）が見られます
+
+---
+
+### 🪜 ステップ 5：失敗時の通知・可視化
+
+- ジョブが失敗した場合、赤い × 印で表示されます
+- Slack やメール通知を設定している場合は通知が届きます
+- 「Retry」ボタンで再実行可能
+
+---
+
+### 💡 応用：成果物やキャッシュの活用
+
+#### 成果物の保存（例：test レポート）
+
+```yaml
+artifacts:
+  paths:
+    - coverage/
+  expire_in: 1 week
+```
+
+#### キャッシュの利用（例：依存解決高速化）
+
+```yaml
+cache:
+  paths:
+    - node_modules/
+```
+
+---
+
+## 🔗 公式ドキュメントリンク（参照）
+
+- 📄 [GitLab CI/CD Pipelines 概要](https://docs.gitlab.com/ee/ci/pipelines/)
+- ⚙️ [GitLab CI/CD YML 記述ガイド](https://docs.gitlab.com/ee/ci/yaml/)
+- 🏃 [GitLab Runner ドキュメント](https://docs.gitlab.com/runner/)
+
+---
+
+## ✅ 補足：よく使う CI 構文（チートシート）
+
+| 要素          | 説明                                    |
+| ------------- | --------------------------------------- |
+| `stages`      | 実行順序を定義（build → test → deploy） |
+| `script`      | シェルで実行するコマンド                |
+| `only/except` | 実行条件（特定ブランチのみなど）        |
+| `artifacts`   | 出力ファイルをジョブ後に保存            |
+| `cache`       | 依存などを再利用して実行時間を短縮      |
+
+---以下に、**GitLab CI/CD でステージごとに通知（Slack など）を送る方法**の具体例を示します。
+
+GitLab では通常、**パイプライン全体の成功/失敗に対して通知を送る**設定が多いですが、**ジョブ（ステージ）ごとに通知を出す方法**も可能です。
+通知先としては Slack や Discord、メールなどが一般的です。
+
+---
+
+## ✅ 前提：Slack 通知のための準備
+
+1. GitLab のプロジェクト設定から
+   `Settings > Integrations > Slack notifications` を開く
+   （もしくは `/your_project/hooks` に直接アクセス）
+
+2. Slack の Webhook URL（Incoming Webhook）を入力
+
+3. イベントごとに通知を有効化（例：Job succeeded/failed）
+
+> 参考：
+> 🔗 [GitLab Docs – Slack notifications](https://docs.gitlab.com/ee/user/project/integrations/slack.html)
+
+---
+
+## ✅ 方法 ①：ステージごとに `script:` で通知を送る（最も柔軟）
+
+Slack 通知をカスタムで送りたい場合、Slack Webhook を直接叩きます。
+
+```yaml
+stages:
+  - build
+  - test
+
+build:
+  stage: build
+  script:
+    - echo "Building..."
+    - curl -X POST -H 'Content-type: application/json' \
+        --data '{"text":"🚧 Build stage started!"}' \
+        https://hooks.slack.com/services/XXXX/YYYY/ZZZZ
+
+test:
+  stage: test
+  script:
+    - echo "Testing..."
+    - curl -X POST -H 'Content-type: application/json' \
+        --data '{"text":"🧪 Test stage completed!"}' \
+        https://hooks.slack.com/services/XXXX/YYYY/ZZZZ
+```
+
+> 💡 `curl`で Webhook に POST するだけなので、他の通知サービス（Discord、Mattermost、LINE Notify など）にも応用可能。
+
+---
+
+## ✅ 方法 ②：パイプラインフック＋条件付き通知（成功/失敗別）
+
+ステージ単位で通知のトーンを変えたい場合は、`after_script` + `$CI_JOB_STATUS` を使う手もあります：
+
+```yaml
+test:
+  stage: test
+  script:
+    - ./run_tests.sh
+  after_script:
+    - >
+      if [ "$CI_JOB_STATUS" = "success" ]; then
+        curl -X POST -H 'Content-type: application/json' \
+          --data '{"text":"✅ テスト成功"}' \
+          https://hooks.slack.com/services/XXXX/YYYY/ZZZZ;
+      else
+        curl -X POST -H 'Content-type: application/json' \
+          --data '{"text":"❌ テスト失敗"}' \
+          https://hooks.slack.com/services/XXXX/YYYY/ZZZZ;
+      fi
+```
+
+---
+
+## ✅ 方法 ③：パイプライン全体の通知（ビルトイン）
+
+```yaml
+notifications:
+  slack:
+    webhook: https://hooks.slack.com/services/XXXX/YYYY/ZZZZ
+    on_success: always
+    on_failure: always
+```
+
+> これは `.gitlab-ci.yml` に直接書く方法ではなく、**GitLab UI で統合設定するパターン**です。
+
+---
+
+## ✅ 応用：テンプレート化する場合（複数ジョブ対応）
+
+通知部分だけを `.gitlab-ci.yml` に関数化したいときは、YAML アンカーを使うと便利です：
+
+```yaml
+.default-slack-notify: &slack-notify
+  script:
+    - curl -X POST -H 'Content-type: application/json' \
+        --data '{"text":"📦 $CI_JOB_NAME finished with status: $CI_JOB_STATUS"}' \
+        https://hooks.slack.com/services/XXXX/YYYY/ZZZZ
+
+notify:
+  stage: notify
+  <<: *slack-notify
+  when: always
+```
+
+---
+
+## 🔐 セキュリティ上の注意
+
+- Slack Webhook URL は**変数（環境変数）に置く**のがベストです
+  GitLab UI → `Settings > CI/CD > Variables` に登録し、`$SLACK_WEBHOOK` として使いましょう。
+
+```yaml
+script:
+  - curl -X POST -H 'Content-type: application/json' \
+      --data '{"text":"✅ Job done!"}' $SLACK_WEBHOOK
+```
+
+---はい、**GitLab からメールを送信するにはメールサーバー（SMTP サーバー）が必須**です。
+ただし、**自前で用意しなくても、外部のメールサービス（Gmail, SendGrid, Amazon SES など）を使って送信可能**です。
+
+以下に、メール通知の概要と、よく使われる SMTP サービスを利用した設定方法を説明します。
+
+---
+
+## ✅ GitLab のメール通知概要
+
+### ✉️ GitLab が送る通知の例：
+
+- ユーザー登録時の確認メール
+- パイプライン（CI/CD）の成功・失敗通知
+- マージリクエストの更新通知
+- コメント、Issue のメンション通知など
+
+> つまり **ユーザーに直接届く開発通知の中核**です。
+
+---
+
+## ✅ メールサーバー（SMTP）の選択肢
+
+| 種類                | 説明                                       |
+| ------------------- | ------------------------------------------ |
+| Gmail               | 個人利用向け。制限あり。2 段階認証必須     |
+| SendGrid            | 無料枠あり。API キーで認証。商用にも人気   |
+| Amazon SES          | AWS アカウントがあれば利用可。低コスト     |
+| SMTP2GO, Mailgun 等 | 他にも無料で使える SMTP サービスが複数ある |
+
+---
+
+## ✅ GitLab で SMTP を設定する方法（例：SendGrid）
+
+### 1. `gitlab.rb` に以下を追加：
+
+```ruby
+gitlab_rails['smtp_enable'] = true
+gitlab_rails['smtp_address'] = "smtp.sendgrid.net"
+gitlab_rails['smtp_port'] = 587
+gitlab_rails['smtp_user_name'] = "apikey"  # 固定文字列（SendGrid用）
+gitlab_rails['smtp_password'] = "SG.xxxxxx"  # SendGridのAPIキー
+gitlab_rails['smtp_domain'] = "example.com"
+gitlab_rails['smtp_authentication'] = "plain"
+gitlab_rails['smtp_enable_starttls_auto'] = true
+
+gitlab_rails['gitlab_email_from'] = 'noreply@example.com'
+```
+
+> `example.com` → 自分のドメイン or 任意のメールアドレスに変更
+
+### 2. 設定の反映：
+
+```bash
+sudo gitlab-ctl reconfigure
+```
+
+---
+
+## ✅ テスト送信コマンド（メール確認用）
+
+```bash
+gitlab-rails console
+Notify.test_email('your@email.com', 'テストメール', 'GitLabからの通知です').deliver_now
+```
+
+---
+
+## ✅ CI/CD のジョブ失敗をメール通知で受けたいとき
+
+これはユーザーの通知設定でできます：
+
+1. GitLab の右上 → `Preferences`（プロフィール）
+2. `Notifications` → Custom に設定
+3. 「Failed pipeline」や「Merge Request events」などを有効化
+4. `watch` 対象プロジェクトに「参加」している必要あり
+
+---
+
+## ✅ メールが届かない時のチェックリスト
+
+| チェック項目          | 対策例                                             |
+| --------------------- | -------------------------------------------------- |
+| SMTP 情報に誤り       | ポート番号、ユーザー名、API キーを再確認           |
+| 迷惑メール扱い        | 自分の受信箱を確認／ドメインをホワイトリストに     |
+| GitLab 側の再起動忘れ | `gitlab-ctl restart`                               |
+| メール認証不足        | SPF/DKIM の設定を DNS 側で確認（特に独自ドメイン） |
+
+---
+
+ご希望であれば：
+
+- Gmail SMTP 用設定例
+- SendGrid の無料アカウント設定手順
+- `.env` ファイルによる Docker Compose との統合方法
+
+なども提供可能です。お気軽にどうぞ！
+結論から言うと、**オンプレの GitLab で通知メールを出すには、何らかのメール転送手段（MTA または外部 SMTP）が必須**です。GitLab 自体には MTA は同梱されていないため、以下 2 つのどちらかを用意・設定する必要があります。
+
+---
+
+### 1. サーバー内に MTA（Postfix など）を立てる
+
+- GitLab は `/usr/sbin/sendmail` が使える環境なら自動でそれを呼び出してメールを送ります。
+  その場合、`gitlab.rb` に追加の **SMTP 設定は不要** で、`gitlab_email_from` など送信元アドレスだけ指定すれば OK です。
+- MTA をコンテナ外に置く場合は、25 番ポートを localhost で開けておくだけで動作します（Docker-Compose なら postfix 用コンテナを 1 つ追加してリンク）。
+
+---
+
+### 2. 外部 SMTP（Gmail, SES, SendGrid など）を経由する
+
+- Omnibus パッケージ（Docker 版を含む）の場合は `/etc/gitlab/gitlab.rb` に下記のようなブロックを追加し、`gitlab-ctl reconfigure` を実行します。
+
+```ruby
+gitlab_rails['smtp_enable']              = true
+gitlab_rails['smtp_address']             = "smtp.example.com"
+gitlab_rails['smtp_port']                = 587        # SES なら 587
+gitlab_rails['smtp_user_name']           = "USERNAME"
+gitlab_rails['smtp_password']            = "PASSWORD"
+gitlab_rails['smtp_domain']              = "example.com"
+gitlab_rails['smtp_authentication']      = "login"
+gitlab_rails['smtp_enable_starttls_auto']= true
+gitlab_rails['gitlab_email_from']        = "[email protected]"
+gitlab_rails['gitlab_email_reply_to']    = "noreply@example.com"
+```
+
+> **ポイント**
+> • SMTP ポート（465/587/25）をファイアウォールで許可
+> • パスワードに `'` などの区切り文字を含めない（YAML/Ruby の解釈事故防止）
+> • 資格情報を平文で置きたくない場合は GitLab の「暗号化設定」機能で `smtp.yaml.enc` に分離可能
+
+---
+
+### 動作確認（テストメール送信）
+
+```bash
+# root で
+gitlab-rails console
+irb(main):001> Notify.test_email('[email protected]', 'GitLab テスト', 'メール送信テスト').deliver_now
+```
+
+送信に成功すればコンソールに `Delivered mail` と表示され、Sidekiq のジョブ失敗ログも出ません。
+
+---
+
+## まとめ
+
+| ケース                      | 追加ソフト                | `gitlab.rb` での SMTP 設定           |
+| --------------------------- | ------------------------- | ------------------------------------ |
+| 同一ホストに Postfix / Exim | 必要なし（sendmail 経由） | **不要**（`gitlab_email_from` だけ） |
+| 外部 SMTP を利用            | 不要                      | **必須**（`smtp_*` ブロックを記述）  |
+
+> **メールサーバーがまったく無い環境では GitLab は通知を送れません。**
+> 送信手段をどちらか決めて設定したうえで `gitlab-ctl reconfigure` → テストメール、が最短ルートです。
