--- a/マニュアル.md
+++ b/マニュアル.md
@@ -1881,3 +1881,144 @@ gitlab.example.com/
 
 この章を踏まえ、**安全な権限設計と定期的な棚卸し**で
 チームの開発効率とリスク低減を両立させましょう。
+
+### 5.2 アクセス制御（プロジェクトとロールの管理）— Planner 追加版
+
+#### 5.2.1 ロール階層と典型的な役割
+
+| ロール名       | 適用対象     | 強さ\* | 主な役割・典型的な使い方                                                                                                                                                                          |
+| -------------- | ------------ | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Owner**      | グループ     | ★★★★★  | グループ最上位。サブグループ作成／削除、SSO・請求管理など全権限                                                                                                                                   |
+| **Maintainer** | プロジェクト | ★★★★☆  | 設定変更・Protected Branch 管理・MR マージ。リリース責任者に最適                                                                                                                                  |
+| **Developer**  | プロジェクト | ★★★☆☆  | ブランチ作成・Push・MR 作成・CI 編集。通常の実装メンバー                                                                                                                                          |
+| **Planner**    | プロジェクト | ★★☆☆☆  | **エピック・ロードマップ・Issue ボード・OKR** 等の“計画系機能”にフルアクセス。<br>ソース閲覧や Push は不可 ─ プロダクト/プロジェクトマネージャ向け ([about.gitlab.com][1], [about.gitlab.com][2]) |
+| **Reporter**   | プロジェクト | ★★☆☆☆  | ソース閲覧・クローン可能。外部監査やビジネス側レビュワー                                                                                                                                          |
+| **Guest**      | プロジェクト | ★☆☆☆☆  | Issue／Wiki 閲覧・コメント程度。顧客・見学者                                                                                                                                                      |
+
+\*★ はあくまで相対的な“権限幅”の目安。
+
+---
+
+#### 5.2.2 操作可否早見表（星取表）
+
+| 操作内容               | Guest | Reporter | **Planner** | Developer | Maintainer | Owner |
+| ---------------------- | :---: | :------: | :---------: | :-------: | :--------: | :---: |
+| Issue／コメント        |  ✅   |    ✅    |     ✅      |    ✅     |     ✅     |  ✅   |
+| エピック作成           |  ❌   |    ❌    |     ✅      |    ✅     |     ✅     |  ✅   |
+| ロードマップ閲覧       |  ❌   |    ❌    |     ✅      |    ✅     |     ✅     |  ✅   |
+| ソース閲覧／クローン   |  ❌   |    ✅    |     ❌      |    ✅     |     ✅     |  ✅   |
+| ブランチ作成・Push     |  ❌   |    ❌    |     ❌      |    ✅     |     ✅     |  ✅   |
+| MR 作成                |  ❌   |    ❌    |     ❌      |    ✅     |     ✅     |  ✅   |
+| MR マージ              |  ❌   |    ❌    |     ❌      |    ❌     |     ✅     |  ✅   |
+| CI/CD 設定編集         |  ❌   |    ❌    |     ❌      |    ✅     |     ✅     |  ✅   |
+| Protected Branch 設定  |  ❌   |    ❌    |     ❌      |    ❌     |     ✅     |  ✅   |
+| グループ課金・SSO 設定 |  ❌   |    ❌    |     ❌      |    ❌     |     ❌     |  ✅   |
+
+---
+
+#### 5.2.3 設定手順（Planner を含む）
+
+| 操作                              | 手順                                                                                                                                          |
+| --------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------- |
+| **プロジェクトで Planner を付与** | 1. _Project → Settings → Members_ <br>2. **Invite member** → ユーザー入力 <br>3. **Role** ドロップダウンで **Planner** を選択 <br>4. _Invite_ |
+| **グループで Owner／Planner**     | _Group → Members_ で同様にロール選択（Owner はグループのみ）                                                                                  |
+| **root ユーザー管理**             | root は GitLab 全体管理者。通常開発には利用せず、<br>必要最小限の運用タスクに限定する                                                         |
+
+> **ライセンス要件**
+> Planner ロールは GitLab 17.7 以降で SaaS／Self-managed どちらでも利用可（Free 以上のすべてのエディション） ([about.gitlab.com][2])
+
+---
+
+#### 5.2.4 用語まとめ
+
+| 用語              | 説明                                                                                    |
+| ----------------- | --------------------------------------------------------------------------------------- |
+| **root ユーザー** | GitLab サーバ初期作成の“神アカウント”。全プロジェクト／設定を操作できるシステム管理者。 |
+| **グループ**      | プロジェクトをまとめる単位。ロールを一括付与でき、サブグループで階層管理も可能。        |
+| **プロジェクト**  | 1 つの Git リポジトリ＋ Issue ＋ CI/CD 設定を保持する開発単位。                         |
+
+---
+
+#### 5.2.5 ベストプラクティス
+
+- **Planner ロール活用**
+  企画/PM がエピックやロードマップを編集でき、コード閲覧を不要にすることで情報漏えいリスクを低減。
+- **Owner と root の分離**
+  グループ運用は Owner、サーバ運用は root と役割を分け誤操作を防止。
+- **定期棚卸し**
+  四半期ごとに _Members_ 画面で不要な Planner／Reporter を失効。
+
+---
+
+##### 参考ドキュメント
+
+- Roles & Permissions（最新版） ([docs.gitlab.com][3])
+- Planner Role Release Note ([about.gitlab.com][1], [about.gitlab.com][2])
+
+[1]: https://about.gitlab.com/blog/2024/11/25/introducing-gitlabs-new-planner-role-for-agile-planning-teams/?utm_source=chatgpt.com "Introducing GitLab's new Planner role for Agile planning teams"
+[2]: https://about.gitlab.com/releases/2024/12/19/gitlab-17-7-released/?utm_source=chatgpt.com "GitLab 17.7 released with new Planner user role"
+[3]: https://docs.gitlab.com/user/permissions/?utm_source=chatgpt.com "Roles and permissions - GitLab Docs"
+
+### グループの作成手順（GitLab UI）
+
+| 手順 | 操作                                                                     | 備考                                                                                                        |
+| ---- | ------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------- |
+| 1    | **左サイドバー最上部の「 ＋ （Create new）」→ 「New group」** をクリック | “Create new” が見当たらない場合は左上の **Menu ≡ → Groups** から「 New group」でも可 ([docs.gitlab.com][1]) |
+| 2    | **Create group** を選択                                                  | テンプレートウィザード（Import group など）が出る場合は「Create blank group」を選択                         |
+| 3    | **Group name** を入力                                                    | 例：`development`                                                                                           |
+| 4    | **Group URL** を入力                                                     | 自動で name が入る。URL は後から変更可                                                                      |
+| 5    | **可視性 (Visibility level)** を選択                                     | `Private / Internal / Public` ─ 機密情報がある場合は **Private** を推奨                                     |
+| 6    | 必要なら **説明・アバター** を入力                                       | 200 kB 以内の PNG/JPG/GIF                                                                                   |
+| 7    | **Create group** をクリック                                              | 数秒後にグループダッシュボードへ遷移し完了 ([docs.gitlab.com][2])                                           |
+
+---
+
+#### サブグループの作成
+
+1. 既存グループ画面右上 **「 New subgroup」**
+2. 上記と同じ要領で名称・URL を入力し **Create group**
+
+サブグループに付与したロールは **親グループの設定を継承** します。
+
+---
+
+### CLI／API で作成したい場合
+
+```bash
+# GitLab API (v4) 例
+curl --header "PRIVATE-TOKEN: <your_token>" \
+     --data "name=backend&path=backend&visibility=private" \
+     https://gitlab.example.com/api/v4/groups
+```
+
+| パラメータ   | 意味                              |
+| ------------ | --------------------------------- |
+| `name`       | 画面表示名                        |
+| `path`       | URL パス（namespace）             |
+| `visibility` | `private` / `internal` / `public` |
+
+---
+
+### グループ作成後の主な初期設定チェック
+
+| 設定箇所                                  | 推奨内容                                      |
+| ----------------------------------------- | --------------------------------------------- |
+| **Settings → General → Path, Visibility** | URL を確定、可視性を Private に固定           |
+| **Settings → Members**                    | Owner/Planner/Maintainer など必要最小限を招待 |
+| **Settings → CI/CD → Variables**          | 共通環境変数（AWS KEY など）を追加            |
+| **Settings → Integrations**               | Slack／メール通知をグループ全体で統一         |
+
+---
+
+### 参考リンク
+
+- GitLab Docs — *Create a group* ([docs.gitlab.com][1])
+- GitLab Docs — _Move personal project to group_（グループ作成チュートリアル内ステップ） ([docs.gitlab.com][2])
+
+> **Tips**
+>
+> - グループを削除すると配下の全プロジェクトも削除対象になるため、**Owner を限定**し、バックアップを取得してから操作しましょう。
+> - 既存の個人プロジェクトをまとめたい場合は「Transfer project」機能でグループ配下へ移動できます。
+
+[1]: https://docs.gitlab.com/tutorials/manage_user/?utm_source=chatgpt.com "Tutorial: Set up your organization - GitLab Docs"
+[2]: https://docs.gitlab.com/tutorials/move_personal_project_to_group/?utm_source=chatgpt.com "Tutorial: Move your personal project to a group - GitLab Docs"
