--- a/マニュアル.md
+++ b/マニュアル.md
@@ -2022,3 +2022,118 @@ curl --header "PRIVATE-TOKEN: <your_token>" \
 
 [1]: https://docs.gitlab.com/tutorials/manage_user/?utm_source=chatgpt.com "Tutorial: Set up your organization - GitLab Docs"
 [2]: https://docs.gitlab.com/tutorials/move_personal_project_to_group/?utm_source=chatgpt.com "Tutorial: Move your personal project to a group - GitLab Docs"
+
+## ローカル（Self-Managed）GitLab を前提にしたアクセス制御まとめ
+
+バージョンは **GitLab 17.7 以降（Community Edition ＝ Free でも OK）** を想定しています。Planner ロールと Epics は 17.7 で Free tier にも標準搭載されました。([about.gitlab.com][1], [docs.gitlab.com][2])
+
+---
+
+### 1. ロール階層と代表的な役割
+
+| ロール         | 適用対象     | 相対的な強さ | 主な用途・特徴                                                                                                  |
+| -------------- | ------------ | ------------ | --------------------------------------------------------------------------------------------------------------- |
+| **Owner**      | グループのみ | ★★★★★        | グループ全権限（SSO/課金/削除まで）。配下プロジェクトも一括管理                                                 |
+| **Maintainer** | プロジェクト | ★★★★☆        | 設定・Protected Branch 管理・MR マージ。リリース責任者                                                          |
+| **Developer**  | プロジェクト | ★★★☆☆        | ブランチ作成・Push・MR 作成・CI 編集。一般開発者                                                                |
+| **Planner**    | プロジェクト | ★★☆☆☆        | **計画系機能（Epics・Roadmap・Issue Board）のみフルアクセス**。コード操作不可。PM/PO 用 ([about.gitlab.com][1]) |
+| **Reporter**   | プロジェクト | ★★☆☆☆        | ソース閲覧・クローン・Issue 投稿。外部レビュー／監査                                                            |
+| **Guest**      | プロジェクト | ★☆☆☆☆        | Issue/Wiki 閲覧とコメントのみ。顧客・見学者                                                                     |
+| **root**       | インスタンス | —            | GitLab サーバ管理者アカウント（全プロジェクト／設定に無制限アクセス）                                           |
+
+---
+
+### 2. 操作可否早見表（星取表）
+
+| 操作                   | Guest | Reporter | **Planner** | Dev | Maint. | Owner |
+| ---------------------- | :---: | :------: | :---------: | :-: | :----: | :---: |
+| Issue／コメント        |  ✅   |    ✅    |     ✅      | ✅  |   ✅   |  ✅   |
+| Epic 作成／編集        |  ❌   |    ❌    |     ✅      | ✅  |   ✅   |  ✅   |
+| ロードマップ閲覧       |  ❌   |    ❌    |     ✅      | ✅  |   ✅   |  ✅   |
+| ソース閲覧／クローン   |  ❌   |    ✅    |     ❌      | ✅  |   ✅   |  ✅   |
+| Push／ブランチ作成     |  ❌   |    ❌    |     ❌      | ✅  |   ✅   |  ✅   |
+| MR 作成                |  ❌   |    ❌    |     ❌      | ✅  |   ✅   |  ✅   |
+| MR マージ              |  ❌   |    ❌    |     ❌      | ❌  |   ✅   |  ✅   |
+| CI/CD 編集             |  ❌   |    ❌    |     ❌      | ✅  |   ✅   |  ✅   |
+| プロジェクト設定変更   |  ❌   |    ❌    |     ❌      | ❌  |   ✅   |  ✅   |
+| グループ削除・SSO 設定 |  ❌   |    ❌    |     ❌      | ❌  |   ❌   |  ✅   |
+
+---
+
+### 3. 設定手順（ローカル GitLab UI）
+
+1. **グループ作成**
+
+   - 左上「 **＋ → New group** 」を選択し、Name／URL／Visibility（通常 **Private**）を設定して **Create group**。([pm.stackexchange.com][3])
+
+2. **プロジェクト作成**
+
+   - グループ内で **New project** → 「Blank project」→ 必要項目を入力 → **Create**。
+
+3. **メンバー招待 & ロール付与**
+
+   - _Project → Settings → Members_ → **Invite member**
+   - ユーザー名／メール入力 → **Role** ドロップダウンで Guest/Reporter/Planner/Developer/Maintainer を選択 → **Invite**。
+   - グループに招待すれば配下プロジェクトへロールが継承される。
+
+4. **Planner ロールが選択肢にない場合**
+
+   - GitLab 17.7 未満なら Planner 未対応。
+   - 17.2〜17.6 の場合は管理者で `Feature flags → work_item_epics` を有効にし、ロール名は Reporter のまま（Planner 以前）。([simlab.ww.uni-erlangen.de][4])
+
+---
+
+### 4. Epics を有効活用するポイント（Self-Managed）
+
+| ステップ             | 内容                                                                                                 |
+| -------------------- | ---------------------------------------------------------------------------------------------------- |
+| **Epics 有効化確認** | _Group Sidebar → Plan → Epics_ が表示されていれば機能は有効。                                        |
+| **Epic 作成**        | グループ左 _Epics_ → **New epic** でタイトル・期日を入力。Planner 以上が必要。([docs.gitlab.com][5]) |
+| **Issue 紐付け**     | Epic 右側 _Issues → Add_ から既存 Issue を追加、または Issue で `/epic #<ID>` とコメント。           |
+| **ロードマップ表示** | グループ左 _Roadmap_ でエピックのタイムラインを俯瞰。                                                |
+| **Epic Boards**      | _Plan → Epic boards_ でラベル別にエピックをカンバン管理。([forum.gitlab.com][6])                     |
+
+> **CE（Community Edition）の場合**
+> 17.7 以降はエピックと Planner ロールが Free で使えますが、**より古い CE** ではエピックは利用できません。その場合はラベル＋ Issue Board で代替してください。([pm.stackexchange.com][3])
+
+---
+
+### 5. ベストプラクティス
+
+1. **最小権限の原則**
+
+   - 開発者＝ Developer、PM ＝ Planner、CI 案件を壊せる Maintainer は限定。
+
+2. **root の日常利用は禁止**
+
+   - root は障害対応や初期設定のみ。普段は個人アカウント＋適切ロールで作業。
+
+3. **四半期ごとに棚卸し**
+
+   - _Members_ 画面で Guest/Reporter など不要ユーザーを失効。
+
+4. **Protected Branch** で本番コードを保護
+
+   - `main` を保護し、Maintainer だけが Write / Force Push できるように設定。
+
+---
+
+#### 参考ドキュメント
+
+- Roles & Permissions （Planner 含む） ([docs.gitlab.com][2])
+- GitLab 17.7 リリース（Planner ロール紹介） ([about.gitlab.com][1])
+- Epics & Epic boards ガイド ([docs.gitlab.com][5], [forum.gitlab.com][6])
+- Epic 作成に必要な Feature Flag history ([simlab.ww.uni-erlangen.de][4])
+
+---
+
+これで **ローカル GitLab** でもエピック＋ Planner を活かした権限設計が行えます。
+バージョンが古い場合や Enterprise 機能を試したい場合は、
+`gitlab-ee` をライセンスなしでインストール → 試用キーを発行する手もあります（30 日間）。
+
+[1]: https://about.gitlab.com/releases/2024/12/19/gitlab-17-7-released/?utm_source=chatgpt.com "GitLab 17.7 released with new Planner user role"
+[2]: https://docs.gitlab.com/user/permissions/?utm_source=chatgpt.com "Roles and permissions - GitLab Docs"
+[3]: https://pm.stackexchange.com/questions/25038/how-to-implement-epics-on-gitlab-without-enterprise-edition?utm_source=chatgpt.com "How to implement Epics on Gitlab without Enterprise Edition?"
+[4]: https://simlab.ww.uni-erlangen.de/help/user/group/epics/epic_work_items.md?utm_source=chatgpt.com "Epic work items · Epics · Group · User · Help - GitLab"
+[5]: https://docs.gitlab.com/user/group/epics/manage_epics/?utm_source=chatgpt.com "Manage epics | GitLab Docs"
+[6]: https://forum.gitlab.com/t/what-are-the-limitations-of-self-managed-gitlab-free-version/83917?utm_source=chatgpt.com "What are the limitations of self managed gitlab free version - General"
