マニュアル

--- a/マニュアル.md
+++ b/マニュアル.md
@@ -2137,3 +2137,200 @@ curl --header "PRIVATE-TOKEN: <your_token>" \
 [4]: https://simlab.ww.uni-erlangen.de/help/user/group/epics/epic_work_items.md?utm_source=chatgpt.com "Epic work items · Epics · Group · User · Help - GitLab"
 [5]: https://docs.gitlab.com/user/group/epics/manage_epics/?utm_source=chatgpt.com "Manage epics | GitLab Docs"
 [6]: https://forum.gitlab.com/t/what-are-the-limitations-of-self-managed-gitlab-free-version/83917?utm_source=chatgpt.com "What are the limitations of self managed gitlab free version - General"
+
+GitLab Community Edition (CE) version 18.0 is distributed under the **MIT License** (also known as MIT Expat) ([docs.gitlab.com][1]).
+
+---
+
+### ✅ まとめ
+
+| 項目         | 内容                                               |
+| ------------ | -------------------------------------------------- |
+| エディション | GitLab Community Edition (CE) 18.0                 |
+| ライセンス   | MIT License（MIT Expat）                           |
+| 特徴         | 完全にオープンソース、商用利用・再配布・改変が可能 |
+
+必要であれば、MIT ライセンスの全文や条項についてもご案内できますので、お気軽にお知らせください 😊
+
+[1]: https://docs.gitlab.com/development/licensing/?utm_source=chatgpt.com "GitLab Licensing and Compatibility"
+
+# 第 5 章：運用方法
+
+GitLab は非常に高機能な開発プラットフォームですが、**長期的な運用においては「安全性」と「可用性」が鍵**となります。本章では、GitLab を組織で安心して運用するためのバックアップ、アクセス制御、認証統合、セキュリティ管理の方法を紹介します。
+
+---
+
+## 5.0 読者ガイド ─ あなたはどこを読む？
+
+以下の表で、ご自身の "立場" と GitLab 上の "ロール" を照合し、**必読セクション** と **参考セクション** を確認してください。必要最小限の情報だけを拾えるため、オンボーディングやレビューの時短になります。
+
+| ペルソナ (肩書き例)           | 想定 GitLab ロール | 本章で必読 (§)                                         | 補助的に参照 (§)              |
+| ----------------------------- | ------------------ | ------------------------------------------------------ | ----------------------------- |
+| **インフラ管理者／SRE**       | root               | 5.1 バックアップ / 5.3 認証統合 / 5.4 セキュリティ管理 | 5.2 アクセス制御              |
+| **組織オーナー／部門長**      | Owner              | 5.2 アクセス制御 / 5.4 セキュリティ管理                | 5.1 バックアップ (概要)       |
+| **リリース責任者／Tech Lead** | Maintainer         | 5.2 アクセス制御                                       | 5.1 バックアップ (概要) / 5.4 |
+| **アプリ開発者**              | Developer          | 5.2 アクセス制御 (自分のロール理解)                    | 5.1 バックアップ (概要)       |
+| **QA／監査担当**              | Reporter           | 5.2 アクセス制御 (閲覧系権限)                          | 5.4 セキュリティ管理          |
+| **顧客／外部利用者**          | Guest              | 5.2 アクセス制御 (Guest 節)                            | ―                             |
+
+> **使い方**
+>
+> 1. 左端のペルソナ列から自分に近い役割を探します。
+> 2. "必読" 欄に挙がっている節をまず確認してください。
+> 3. 余裕があれば "補助的に参照" 節を読み、全体像を掴むと良いでしょう。
+
+---
+
+## 5.1 バックアップ
+
+### ▶ 定期バックアップの必要性
+
+万が一の障害に備えて、GitLab では以下のデータを定期的にバックアップすることが推奨されます。
+
+- リポジトリの内容
+- Issue・Merge Request などのメタデータ
+- CI/CD 設定
+- コンテナ/パッケージレジストリ
+
+### ▶ バックアップコマンド（例）
+
+GitLab CE の場合：
+
+```bash
+sudo gitlab-backup create
+```
+
+デフォルトでは `/var/opt/gitlab/backups` に `.tar` ファイルが作成されます。
+
+### ▶ 復元（リストア）方法
+
+```bash
+# 事前に GitLab を停止
+sudo gitlab-ctl stop unicorn
+sudo gitlab-ctl stop sidekiq
+
+# 復元
+sudo gitlab-backup restore BACKUP=1698201540_2023_10_25_13.2.4
+
+# GitLab を再起動
+sudo gitlab-ctl restart
+```
+
+> 💡 自動化には cron や systemd timer でのスケジューリングを推奨します。
+
+---
+
+## 5.2 アクセス制御（プロジェクトとロールの管理）
+
+GitLab では、**個人やチームの役割に応じてアクセス権限を細かく設定**できます。
+
+### ▶ 権限レベル
+
+| 権限       | 説明                                       |
+| ---------- | ------------------------------------------ |
+| Guest      | 読み取り専用。Issue 閲覧は可能             |
+| Reporter   | リポジトリをクローンして参照可能           |
+| Developer  | ブランチ作成や Push が可能                 |
+| Maintainer | 設定変更・マージ操作が可能                 |
+| Owner      | グループの全権限を持つ（グループ単位のみ） |
+
+### ▶ 利用例
+
+- **外注開発者には Reporter に制限**
+- **CI 設定を誤って壊さないよう、Maintainer 権限は限定メンバーのみ**
+
+# 第 5 章：運用方法
+
+GitLab は非常に高機能な開発プラットフォームですが、**長期的な運用においては「安全性」と「可用性」が鍵**となります。本章では、GitLab を組織で安心して運用するためのバックアップ、アクセス制御、認証統合、セキュリティ管理の方法を紹介します。
+
+---
+
+## 5.0 読者ガイド ─ あなたはどこを読む？
+
+以下の表で、ご自身の "立場" と GitLab 上の "ロール" を照合し、**必読セクション** と **参考セクション** を確認してください。必要最小限の情報だけを拾えるため、オンボーディングやレビューの時短になります。
+
+| 大分類ペルソナ                                     | 代表ロール                       | 本章で必読 (§)          | 補助的に参照 (§) |
+| -------------------------------------------------- | -------------------------------- | ----------------------- | ---------------- |
+| **システム管理者／オーナー層**<br>(root, Owner)    | root / Owner                     | 5.1, 5.3, 5.4           | 5.2              |
+| **開発チーム**<br>(Maintainer, Developer, Planner) | Maintainer / Developer / Planner | 5.2                     | 5.1 (概要), 5.4  |
+| **閲覧・外部ユーザー**<br>(Reporter, Guest)        | Reporter / Guest                 | 5.2 (Guest/Reporter 節) | —                |
+
+> **使い方**
+>
+> 1. 左端のペルソナ列から自分に近い役割を探します。
+> 2. "必読" 欄に挙がっている節をまず確認してください。
+> 3. 余裕があれば "補助的に参照" 節を読み、全体像を掴むと良いでしょう。
+
+\---------------------------------|--------------------|----------------------------------------------|----------------------------------|
+\| **インフラ管理者／SRE** | root | 5.1 バックアップ / 5.3 認証統合 / 5.4 セキュリティ管理 | 5.2 アクセス制御 |
+\| **組織オーナー／部門長** | Owner | 5.2 アクセス制御 / 5.4 セキュリティ管理 | 5.1 バックアップ (概要) |
+\| **リリース責任者／Tech Lead** | Maintainer | 5.2 アクセス制御 | 5.1 バックアップ (概要) / 5.4 |
+\| **アプリ開発者** | Developer | 5.2 アクセス制御 (自分のロール理解) | 5.1 バックアップ (概要) |
+\| **QA／監査担当** | Reporter | 5.2 アクセス制御 (閲覧系権限) | 5.4 セキュリティ管理 |
+\| **顧客／外部利用者** | Guest | 5.2 アクセス制御 (Guest 節) | ― |
+
+> **使い方**
+>
+> 1. 左端のペルソナ列から自分に近い役割を探します。
+> 2. "必読" 欄に挙がっている節をまず確認してください。
+> 3. 余裕があれば "補助的に参照" 節を読み、全体像を掴むと良いでしょう。
+
+---
+
+## 5.1 バックアップ
+
+### ▶ 定期バックアップの必要性
+
+万が一の障害に備えて、GitLab では以下のデータを定期的にバックアップすることが推奨されます。
+
+- リポジトリの内容
+- Issue・Merge Request などのメタデータ
+- CI/CD 設定
+- コンテナ/パッケージレジストリ
+
+### ▶ バックアップコマンド（例）
+
+GitLab CE の場合：
+
+```bash
+sudo gitlab-backup create
+```
+
+デフォルトでは `/var/opt/gitlab/backups` に `.tar` ファイルが作成されます。
+
+### ▶ 復元（リストア）方法
+
+```bash
+# 事前に GitLab を停止
+sudo gitlab-ctl stop unicorn
+sudo gitlab-ctl stop sidekiq
+
+# 復元
+sudo gitlab-backup restore BACKUP=1698201540_2023_10_25_13.2.4
+
+# GitLab を再起動
+sudo gitlab-ctl restart
+```
+
+> 💡 自動化には cron や systemd timer でのスケジューリングを推奨します。
+
+---
+
+## 5.2 アクセス制御（プロジェクトとロールの管理）
+
+GitLab では、**個人やチームの役割に応じてアクセス権限を細かく設定**できます。
+
+### ▶ 権限レベル
+
+| 権限       | 説明                                       |
+| ---------- | ------------------------------------------ |
+| Guest      | 読み取り専用。Issue 閲覧は可能             |
+| Reporter   | リポジトリをクローンして参照可能           |
+| Developer  | ブランチ作成や Push が可能                 |
+| Maintainer | 設定変更・マージ操作が可能                 |
+| Owner      | グループの全権限を持つ（グループ単位のみ） |
+
+### ▶ 利用例
+
+- **外注開発者には Reporter に制限**
+- **CI 設定を誤って壊さないよう、Maintainer 権限は限定メンバーのみ**
